--- a/Exercício1/Exercício1.csproj
+++ b/Exercício1/Exercício1.csproj
@@ -156,9 +156,37 @@
     can be found.
   -->
   <ItemGroup>
+    <Compile Include="AddField.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddField.Designer.cs">
+      <DependentUpon>AddField.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddSpan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddSpan.Designer.cs">
+      <DependentUpon>AddSpan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FindPanel.cs" />
+    <Compile Include="FindPanelPresenter.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FindPanelPresenter.Designer.cs">
+      <DependentUpon>FindPanelPresenter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <EmbeddedResource Include="AddField.resx">
+      <DependentUpon>AddField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddSpan.resx">
+      <DependentUpon>AddSpan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FindPanelPresenter.resx">
+      <DependentUpon>FindPanelPresenter.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -168,6 +196,16 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="QualificacaoForm.resx">
+      <DependentUpon>QualificacaoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ribbon1.resx">
+      <DependentUpon>Ribbon1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TableConfigWindow.resx">
+      <DependentUpon>TableConfigWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="Exercício1_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -175,6 +213,25 @@
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="QualificacaoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QualificacaoForm.Designer.cs">
+      <DependentUpon>QualificacaoForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ribbon1.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Ribbon1.Designer.cs">
+      <DependentUpon>Ribbon1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RibbonPresenter.cs" />
+    <Compile Include="TableConfigWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TableConfigWindow.Designer.cs">
+      <DependentUpon>TableConfigWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
@@ -191,6 +248,15 @@
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>Exercício1_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>C50C698DE8FABDBE7A2556579EF45E7DBB894272</ManifestCertificateThumbprint>
+  </PropertyGroup>
   <!-- Include the build rules for a C# project. -->
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- Include additional build rules for an Office application add-in. -->
@@ -201,7 +267,7 @@
       <FlavorProperties GUID="{BAA0C2D2-18E2-41B9-852F-F413020CAA33}">
         <ProjectProperties HostName="Word" HostPackage="{29A7B9D7-A7F1-4328-8EF0-6B2D1A56B2C1}" OfficeVersion="15.0" VstxVersion="4.0" ApplicationType="Word" Language="cs" TemplatesPath="" DebugInfoExeName="#Software\Microsoft\Office\16.0\Word\InstallRoot\Path#WINWORD.EXE" DebugInfoCommandLine="/x" AddItemTemplatesGuid="{51063C3A-E220-4D12-8922-BDA915ACD783}" />
         <Host Name="Word" GeneratedCodeNamespace="Exercício1" IconIndex="0">
-          <HostItem Name="ThisAddIn" Code="ThisAddIn.cs" CanonicalName="ThisAddIn" CanActivate="false" IconIndex="1" Blueprint="ThisAddIn.Designer.xml" GeneratedCode="ThisAddIn.Designer.cs" />
+          <HostItem Name="ThisAddIn" Code="ThisAddIn.cs" CanonicalName="AddIn" CanActivate="false" IconIndex="1" Blueprint="ThisAddIn.Designer.xml" GeneratedCode="ThisAddIn.Designer.cs" />
         </Host>
       </FlavorProperties>
     </VisualStudio>
