--- a/Exercício1/Exercício1.csproj
+++ b/Exercício1/Exercício1.csproj
@@ -100,6 +100,27 @@
   -->
   <ItemGroup>
     <Reference Include="Accessibility" />
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector, Version=3.2.0.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.3.2.0\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
+    <Reference Include="StructureMap, Version=4.5.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\StructureMap.4.5.2\lib\net45\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -109,6 +130,21 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="WinFormsMvp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormsMVP.Core.1.0.2008.2017\lib\net46\WinFormsMvp.dll</HintPath>
+    </Reference>
+    <Reference Include="WinFormsMvp.Ninject, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormsMVP.Ninject.1.0.2008.2017\lib\net46\WinFormsMvp.Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="WinFormsMvp.SimpleInjector, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormsMVP.SimpleInjector.1.0.2008.2017\lib\net46\WinFormsMvp.SimpleInjector.dll</HintPath>
+    </Reference>
+    <Reference Include="WinFormsMvp.StructureMap, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormsMVP.StructureMap.1.0.2108.2017\lib\net46\WinFormsMvp.StructureMap.dll</HintPath>
+    </Reference>
+    <Reference Include="WinFormsMvp.Unity, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WinFormsMVP.Unity.1.0.2008.2017\lib\net46\WinFormsMvp.Unity.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Office.Tools.v4.0.Framework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -156,36 +192,46 @@
     can be found.
   -->
   <ItemGroup>
-    <Compile Include="AddField.cs">
+    <Compile Include="Source\Presenters\AddFieldPresenter.cs" />
+    <Compile Include="Source\Presenters\AddImagePresenter.cs" />
+    <Compile Include="Source\Presenters\AddSpanPresenter.cs" />
+    <Compile Include="Source\Presenters\InserirTabelaPresenter.cs" />
+    <Compile Include="Source\Presenters\InvertCasePresenter.cs" />
+    <Compile Include="Source\Presenters\QualificacaoPresenter.cs" />
+    <Compile Include="Source\Presenters\SaveAsPDFPresenter.cs" />
+    <Compile Include="Source\Views\AddFieldView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddField.Designer.cs">
-      <DependentUpon>AddField.cs</DependentUpon>
+    <Compile Include="Source\Views\AddFieldView.Designer.cs">
+      <DependentUpon>AddFieldView.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddSpan.cs">
+    <Compile Include="Source\Views\AddImageView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddSpan.Designer.cs">
-      <DependentUpon>AddSpan.cs</DependentUpon>
+    <Compile Include="Source\Views\AddSpanView.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FindPanel.cs" />
-    <Compile Include="FindPanelPresenter.cs">
+    <Compile Include="Source\Views\AddSpanView.Designer.cs">
+      <DependentUpon>AddSpanView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Source\Presenters\FindPanel.cs" />
+    <Compile Include="Source\Views\FindPanelView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="FindPanelPresenter.Designer.cs">
-      <DependentUpon>FindPanelPresenter.cs</DependentUpon>
+    <Compile Include="Source\Views\FindPanelView.Designer.cs">
+      <DependentUpon>FindPanelView.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <EmbeddedResource Include="AddField.resx">
-      <DependentUpon>AddField.cs</DependentUpon>
+    <EmbeddedResource Include="Source\Views\AddFieldView.resx">
+      <DependentUpon>AddFieldView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddSpan.resx">
-      <DependentUpon>AddSpan.cs</DependentUpon>
+    <EmbeddedResource Include="Source\Views\AddSpanView.resx">
+      <DependentUpon>AddSpanView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FindPanelPresenter.resx">
-      <DependentUpon>FindPanelPresenter.cs</DependentUpon>
+    <EmbeddedResource Include="Source\Views\FindPanelView.resx">
+      <DependentUpon>FindPanelView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -196,16 +242,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="QualificacaoForm.resx">
-      <DependentUpon>QualificacaoForm.cs</DependentUpon>
+    <EmbeddedResource Include="Source\Views\InserirTabelaView.resx">
+      <DependentUpon>InserirTabelaView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Ribbon1.resx">
+    <EmbeddedResource Include="Source\Views\QualificacaoFormView.resx">
+      <DependentUpon>QualificacaoFormView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Source\Ribbon\Ribbon1.resx">
       <DependentUpon>Ribbon1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="TableConfigWindow.resx">
-      <DependentUpon>TableConfigWindow.cs</DependentUpon>
-    </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Exercício1_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -214,24 +262,37 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="QualificacaoForm.cs">
+    <Compile Include="Source\Views\IAddFieldView.cs" />
+    <Compile Include="Source\Views\IAddImage.cs" />
+    <Compile Include="Source\Views\IAddSpanView.cs" />
+    <Compile Include="Source\Views\IInserirTabela.cs" />
+    <Compile Include="Source\Views\InserirTabelaView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="QualificacaoForm.Designer.cs">
-      <DependentUpon>QualificacaoForm.cs</DependentUpon>
+    <Compile Include="Source\Views\InserirTabelaView.Designer.cs">
+      <DependentUpon>InserirTabelaView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Ribbon1.cs">
+    <Compile Include="Source\Views\IInvertCase.cs" />
+    <Compile Include="Source\Views\InvertCaseView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Source\Views\IQualificacaoPJ.cs" />
+    <Compile Include="Source\Views\ISaveAsPDF.cs" />
+    <Compile Include="Source\Views\QualificacaoFormView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Source\Views\QualificacaoFormView.Designer.cs">
+      <DependentUpon>QualificacaoFormView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Source\Ribbon\Ribbon1.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Ribbon1.Designer.cs">
+    <Compile Include="Source\Ribbon\Ribbon1.Designer.cs">
       <DependentUpon>Ribbon1.cs</DependentUpon>
     </Compile>
-    <Compile Include="RibbonPresenter.cs" />
-    <Compile Include="TableConfigWindow.cs">
+    <Compile Include="Source\Presenters\RibbonPresenter.cs" />
+    <Compile Include="Source\Views\SaveAsPDFView.cs">
       <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TableConfigWindow.Designer.cs">
-      <DependentUpon>TableConfigWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="ThisAddIn.cs">
       <SubType>Code</SubType>
@@ -243,6 +304,10 @@
       <DependentUpon>ThisAddIn.Designer.xml</DependentUpon>
     </Compile>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resource\" />
+    <Folder Include="Source\Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
